[tool.poetry]
name = "curse-api"
repository = "https://github.com/Stinky-c/curse-api"
homepage = "https://github.com/Stinky-c/curse-api"
readme = "README.md"
version = "0.3.1"
description = "A simple curseforge api wrapper"
authors = ["Stinky-c <60587749+Stinky-c@users.noreply.github.com>"]
license = "MIT"
keywords = ["curseforge", "api wrapper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
]


[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"
pydantic = "^1.10.2"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^0.21.0"
pytest = "^7.1.3"
tox = "^3.26.0"
black = { version = "^22.10.0", allow-prereleases = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
